Cambios en la documentacion y nuevo readme
